# qremote

./: .gitignore  Cargo.toml  Cross.toml  README.md  cross.nix  flake.nix
.github/workflows/: build.yml
assets/: app.js  styles.css
cross/: Dockerfile.x86_64-pc-windows-gnu
src/: frontend.rs  lib.rs  main.rs  media_controls.rs  websockets.rs
templates/: index.hbs
