[package]
name = "qremote"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
enigo = { version = "0.3.0", features = ["wayland"] }
futures = "0.3.31"
gethostname = "0.5.0"
handlebars = "6.3.0"
include_dir = "0.7.4"
lazy_static = "1.5.0"
local-ip-address = "0.6.3"
qrcode = "0.14.1"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs"] }
