[package]
name = "qremote"
description = "A multi-platform (Linux (X11/Wayland), MacOS, and Windows) zero setup remote for any computer you're playing media on."
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.5", features = ["ws"] }
axum-extra = { version = "0.12.0", features = ["typed-header"] }
clap = { version = "4.5.41", features = ["derive"] }
enigo = { version = "0.6.1", features = ["serde", "wayland"] }
futures = "0.3.31"
gethostname = "1.0.0"
local-ip-address = "0.6.3"
maud = { version = "0.27.0", features = ["axum"] }
mime_guess = "2.0.5"
qrcode = "0.14.1"
rust-embed = { version = "8.5.0", features = ["mime_guess", "compression"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
